Изменено на ArrayList